--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
+    "ion-serve-lab": "ionic serve -l",
     "ion-serve": "ionic serve",
     "ng": "ng",
     "start": "ng serve",
@@ -21,10 +22,15 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@angular/service-worker": "~10.0.0",
+    "@capacitor/core": "2.4.3",
+    "@capacitor/ios": "^2.4.3",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/firebase-authentication": "^5.30.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "cordova-plugin-firebase-authentication": "^4.0.1",
     "firebase": "^8.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -36,10 +42,12 @@
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@angular/language-service": "~10.0.0",
+    "@capacitor/cli": "2.4.3",
     "@ionic/angular-toolkit": "^2.3.0",
-    "@types/node": "^12.11.1",
+    "@ionic/lab": "3.2.9",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
